unified_tests/naming/constant_name_not_upper_snake_case/expect/build.text.stderr
lib.copp:1:1: error: constant name must be UPPER_SNAKE_CASE
  apiVersion: string := "v1"
  ^
